--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
         size-parameter: tamano
       sort:
         sort-parameter: orden
+  flyway:
+    baseline-on-migrate: true
 
   jpa:
     hibernate:
