--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -17,8 +17,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
+
+server:
+  error:
+      include-stacktrace: never
+
+api:
+  security:
+    secret: ${JWT_SECRET:123456}
