--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 HELP.md
+
+# Maven
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# Logs
+*.log
+
+# STS
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +18,25 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+# IntelliJ IDEA
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# /nbbuild/  ← solo si usas NetBeans
+# /dist/
+# /nbdist/
+# .nb-gradle/
+# build/
+# !**/src/main/**/build/
+# !**/src/test/**/build/
 
-### VS Code ###
+# VS Code
 .vscode/
+
+# OS
+.DS_Store
+Thumbs.db
